[Task-4] Add DynamoDB table usage to Product service
